fix: Fix inherit text-align

--- a/client/UI/Input/Input.module.css
+++ b/client/UI/Input/Input.module.css
@@ -62,6 +62,7 @@
 
   font-size: inherit;
   font-family: inherit;
+  text-align: inherit;
 
   background: transparent;
   border: 0;
